--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -1,3 +1,5 @@
+In order of priority:
+
 Add catch for images that aren't large enough for "b"
   - Catch 302s in view?!?
 
@@ -6,3 +8,6 @@ Add jquery requests to get new images
 mod jquery requests to get images without interrupting slide show
 
 make it pretty
+
+write crazy URL structure for permanence of results and sharing
+
