--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -1,13 +1,13 @@
 In order of priority:
 
-Fix URLs to go to photo page, not size page
-
 write crazy URL structure for permanence of results and sharing
 
 Add jquery requests to get new images
 
 mod jquery requests to get images without interrupting slide show
 
-make it pretty
+Set up array structure so images can be pulled from slideshow without stopping flow
+
+
 
 
