--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -1,5 +1,9 @@
 In order of priority:
 
+Fix permalink code
+ - fix repeat urls
+ - strip whitespace
+
 Add jquery requests to get new images
 
 mod jquery requests to get images without interrupting slide show
