--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -1,5 +1,7 @@
 In order of priority:
 
+Catch errors such as 404s and nil responses.
+
 Add jquery requests to get new images
 
 mod jquery requests to get images without interrupting slide show
