--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -1,6 +1,8 @@
 In order of priority:
 
-Catch errors such as 404s and nil responses.
+Catch errors such as 404s
+
+Fix nil responses.
 
 Encode colons in URLs
 
